day3/k8s/namespace-and-serviceaccounts.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app
  labels:
    app.kubernetes.io/part-of: apdev
